# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt  sonar-project.properties
.github/: build.yml
.github/workflows/: build.yml
page_analyzer/: __init__.py  app.py  parser.py  url_validator.py
page_analyzer/templates/: 404.html  index.html  url_page.html  urls.html
page_analyzer/templates/layout/: layout.html
