[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page_analyzer"
authors = ["Oleg Latypov <latol179@mail.ru>"]
readme = "README.md"
packages = [{ include = "page_analyzer" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
