[project]
name = "hexlet-code"
version = "0.1.0"
description = "page_analyzer"
authors = [{ name = "Oleg Latypov", email = "latol179@mail.ru" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "flask>=3.1.0,<4",
    "gunicorn>=20.1.0,<21",
    "jinja2>=3.1.4,<4",
    "python-dotenv>=1.0.1,<2",
    "psycopg2-binary>=2.9.10,<3",
    "validators>=0.34.0,<0.35",
    "requests>=2.32.3,<3",
    "beautifulsoup4>=4.12.3,<5",
]

[dependency-groups]
dev = ["ruff", "pytest>=8.3.3,<9"]

[tool.ruff]
lint.extend-select = ['E', 'W', 'F', 'I', 'UP']
lint.unfixable = ['F401']
lint.ignore = ['F401']

#[tool.hatch.build.targets.sdist]
#include = ["page_analyzer"]

#[tool.hatch.build.targets.wheel]
#include = ["page_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]
